--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,6 @@
 /node_modules
 /.pnp
 .pnp.js
-/package-lock.json
 
 # testing
 /coverage
@@ -14,15 +13,10 @@
 
 # misc
 .DS_Store
-.vscode
-
-# env
-.env*.local
-.devops/env/vars/dotfiles
-.devops/env/deploy/gitlab/secrets
-
-# builds
-/build-*
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
 npm-debug.log*
 yarn-debug.log*
