--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "@types/react": "^18.2.65",
     "@types/react-dom": "^18.2.21",
     "@types/react-snapshot": "^1.3.4",
+    "global": "^4.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.15.0",
     "react-router-hash-link": "^2.4.3",
     "react-scripts": "5.0.1",
     "sass": "^1.69.5",
+    "serve": "^14.2.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
@@ -50,7 +52,7 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-    "react-snap": "^1.23.0",
-    "env-cmd": "^10.1.0"
+    "env-cmd": "^10.1.0",
+    "react-snap": "^1.23.0"
   }
 }
