--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "@types/node": "^16.18.88",
     "@types/react": "^18.2.65",
     "@types/react-dom": "^18.2.21",
-    "@types/react-snapshot": "^1.3.4",
     "global": "^4.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -21,7 +20,9 @@
     "sass": "^1.69.5",
     "serve": "^14.2.1",
     "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "puppeteer-core": "^10.1.0",
+    "chrome-aws-lambda": "^10.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -29,8 +30,7 @@
     "build:prod": "BUILD_PATH='./build-prod' CI='false' env-cmd -f .devops/env/vars/dotfiles/prod.env react-scripts build",
     "build:stage": "BUILD_PATH='./build-stage' CI='false' env-cmd -f .devops/env/vars/dotfiles/stage.env react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "postbuild": "react-snap"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
@@ -52,7 +52,6 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-    "env-cmd": "^10.1.0",
-    "react-snap": "^1.23.0"
+    "env-cmd": "^10.1.0"
   }
 }
